align my links to right

--- a/SKIES PORTAL/Results.html
+++ b/SKIES PORTAL/Results.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results</title>
+    <link rel="stylesheet"href="style.css">
 </head>
 <body>
     <header>
@@ -11,13 +12,13 @@
         <h1>KIEPS TRAINING</h1>
         <h2> Welcome to the skies results page.</h2>
     <nav> 
-        <url>
+        <ul>
         <li><a href ="Home.html">Home</a></li>
         <li><a href ="Courses.html">Courses</a></li>
         <li><a href ="Finance.html">Finance</a></li>
         <li><a href ="Results.html">Results</a></li>
         <li><a href ="Contact.html">Contact</a></li>
-</url>
+</ul>
 </nav>
     </header>
         <h2>Results</h2>
