align my other file links to right

--- a/SKIES PORTAL/Home.html
+++ b/SKIES PORTAL/Home.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet"href="style.css">
 </head>
 <body>
     <header> 
         <h1>KIEPS TRAINING</h1>
         <h2> Welcome to the skies Student Portal.</h2>
     <nav>
-        <url>
+        <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Courses.html">Courses</a></li>
             <li><a href="Finance.html">Finance</a></li>
             <li><a href="Results.html">Results</a></li>
             <li><a href="Contact.html">Contact</a></li>
-          </url>
+          </ul>
 </nav>
 </header>
 <main>
